<resources>
    <string name="app_name">مجلس النواب الاردني</string>
    <string name="about">عن المجلس</string>
    <string name="deputies">اعضاء المجلس</string>
    <string name="news">الاخبار</string>
    <string name="title">مجلس النواب الاردني</string>
    <string name="about_menu_item">عن المجلس</string>
    <string name="deputies_menu_item">الاعضاء</string>
    <string name="committees_menu_item">اللجان</string>
    <string name="JHRAppLogo">شعار مجلس النواب</string>
    <string name="deputy_name">النائب</string>
    <string name="deputy_image">صورة النائب</string>
    <string name="committe_name">اللجنة</string>
    <string name="council_roles_title">وظائف مجلس النواب</string>
    <string name="council_roles_body"><b>تناط بمجلس النواب وظيفتين أساسيتين هما:</b>\n\n
<b>أولاً: التشريع:</b>\n\n
تمارس هذه الوظيفة من
        خلال مناقشة ودراسة القوانين التي تحيلها الحكومة إلى مجلس النواب أو من خلال اقتراح عشرة نواب او أكثر
        لقانون ما، وفي حالة ورود مشروع القانون من الحكومة الى المجلس فانه يرد الى رئيس المجلس الذي يدرجه
        على جدول اعمال اول جلسه للمجلس، وبعدها تتم قراءة المشروع علناً في المجلس او الاكتفاء بتوزيعه المسبق
        على الاعضاء فيقرر المجلس اما بقبوله واحالته على اللجنة المختصة واما رفضه واحالته الى مجلس الاعيان، وفي
        حالة قبوله واحالته للجنة فان اللجنة تدرس المشروع وتضع التعديلات عليه والاقتراحات المختلفة، ليصار بعد
        ذلك الى مناقشته داخل المجلس مادة مادة اصلا وتعديلا واقتراح اللجنة واقتراحات اعضاء المجلس التي لم تأخذ
        بها اللجنة، وبعد الانتهاء من التصويت على المواد يؤخذ الرأي على مشروع القانون برمته، واذا قررت الاكثرية
        قبول المشروع او رفضه يرفع الى مجلس الاعيان. وفي حالة اقتراح اعضاء المجلس للقانون فإنه يحال مع اسبابه
        الموجبه بمجموعه على اللجنة المختصة لابداء الرأي، فاذا رأى المجلس بعد الاستماع لرأي اللجنة قبول الاقتراح
        أحاله على الحكومة لوضعه في صيغة مشروع قانون وتقديمه للمجلس في الدورة التي قدم فيها او التي يليها.\n\n
<b>ثانياً: الرقابــة:</b>
تعتبر الوظيفة الرقابية المهمة
        الثانية لمجلس النواب لما لها من دور كبير ومهم في مراقبة أعمال السلطة التنفيذية، ولكي يتمكن المجلس
        من
        اداء هذه المهمة فقد حدد نظامه الداخلي أدوات الرقابة البرلمانية وآلية استخدامها، وهذه الأدوات هي:\n\n
<b>السؤال</b>: هو استفهام العضو من رئيس الوزراء او الوزراء عن امر يجهله
        في شأن من الشؤون التي تدخل في اختصاصهم او رغبته في التحقق من حصول واقعة وصل علمها إليه او استعلامه
        عن نية الحكومة في أمر من الأمور، وعلى من وجه إليه السؤال ان يجيب خلال مدة لا تتجاوز أربعة عشر يوماً.\n\n
<b>الاستجـواب:</b>
        هو محاسبة الوزراء او احدهم على تصرف له في شأن من الشؤون العامة، وعلى الوزير ان يجيب على الاستجواب خلال
        مدة لا تتجاوز 21 يوما الا اذا رأى الرئيس ان الحالة مستعجلة ووافق الوزير على تقصير المدة، ويحق للمستجوب
        اذا لم يقتنع برد الوزير ان يطرح الثقة بالوزارة او الوزير مع مراعاة أحكام المادة (54) من الدستور.\n\n
<b>المناقشــة العامــة:</b> هو تبادل للرأي والمشورة بين المجلس والحكومة في أي موضوع يعنى في قضايا
        عامة وسياسية، ويحق لطالبي المناقشة طرح الثقة بالحكومة مع مراعاة احكام المادة (54) من الدستور.\n\n
<b>الاقتــراح برغبـــــة:</b> هو الرغبة في دعوة الحكومة للقيام بأي عمل ذي اهمية يدخل في اختصاصها.\n\n
<b>طرح الثقة بالحكومة:</b> حيث تطرح الثقة بالوزارة او بأحد الوزراء بناء على طلب موقع
        من عدد لا يقل عن عشرة نواب، ويتم طرح الثقة في جلسة خاصة تسمى الجلسة الخاصة بطرح الثقة بالحكومة، وإذا
        قرر مجلس النواب عدم الثقة بأحد الوزراء او الوزارة بأكملها وجبت هنا الاستقالة للوزير او الوزارة.\n\n
<b>التحقق:</b> لمجلس النواب الحق في إجراء التحقق في الأمور المحالة إليه
        او التي يرى أنها بحاجة إلى التحقق منها من خلال ممارسة دوره الرقابي عن طريق اللجان الدائمة او تشكيل
        لجاناً مؤقتة لهذه الغاية وترفع اللجان تقريرها وتوصياتها إلى المجلس لاتخاذ القرار المناسب بشأنها.\n\n
<b>بند ما يستجد من أعمال:</b> وهو
        اعطاء الحق لأعضاء المجلس بتوجيه الأسئلة المباشرة إلى رئيس الوزراء أو الوزراء خلال الجلسات الرقابية.\n\n
بالاضافة الى النقطتين الرئيسيتين
        يعتبر النائب هو حلقة الوصل ما بين المواطنين والحكومه، والنائب هو الذي يمثل تلك الفئة من المواطنين

        أمام السلطة التنفيذية وينطق باسمهم ويستقبل همومهم وطلباتهم لتتولى الحكومة تنفيذها والتواصل معهم.\n\n
    </string>
    <string name="sessions_title">الدورات</string>
    <string name="sessions_body"><b>يعقد        مجلس النواب اجتماعاته على عدة دورات وهي على ثلاثة أنواع:</b>\n\n
<b>1- الدورة العادية:</b>\n\n
حيث يعقد المجلس في كل سنة شمسية من عمره دورة عادية واحدة مدتها ستة اشهر، إلا إذا حل الملك
        المجلس قبل انقضاء تلك المدة، ويجوز للملك أن يمدد الدورة العادية مدة أخرى لا تزيد عن ثلاثة أشهر.\n\n
<b>2- الدورات الاستثنائية:</b>\n\n
تعقد الدورات الاستثنائية بعد فض الدورة
        العادية، وأعطى الدستور الحق للملك أو بطلب من الاغلبية المطلقة لأعضاء مجلس النواب بأن هناك حاجة
        لها. وتحدد الإرادة الملكية السامية بنود الدورة التي ينحصر دور المجلس خلالها بالأمور الورادة فيها.\n\n
<b>3- الدورة غير العادية:</b>\n\n
        تعقد الدورة غير العادية في
        حالة انتخاب مجلس النواب بعد المدة المنصوص عليها في الدستور لانعقاد الدورة العادية وهي الأول من تشرين
        الأول ويجوز للملك إرجاء انعقادها حتى الأول من كانون الأول من كل سنة ولا يجوز أن تتجاوز مدة الدورة غير
        العادية
        عن
        الثلاثين
        من أيلول ويسري عليها أحكام المادة (78) من الدستور وتشملها شروط التمديد والتأجيل.</string>
    <string name="permanent_office_title">المكتب الدائم</string>
    <string name="permanent_office_body"><b>يتولى المكتب الدائم الصلاحيات التالية:</b>\n
\t\t  1- دراسة الاعتراضات حول محاضر الجلسات وخلاصاتها ونتائج الاقتراع، والتحقيق بها وإصدار القرارات المناسبة.\n
\t\t    2- الإشراف على تنفيذ موازنة المجلس السنوية.\n
\t\t    3- إدراج أي أمر يراه ضرورياً على جدول أعمال المجلس.\n
\t\t    4- تشكيل الوفود التي تمثل المجلس واختيار رؤسائها إلا إذا كان الرئيس أو احد نائبيه من أعضائها فتكون له الرئاسة وتزويد المكتب التنفيذي باسماء الوفود.\n
\t\t    5- أي مهام أخرى يكلف بها من قبل المجلس.\n\n

كما نصت المادة (35) من النظام الداخلي لمجلس النواب على انه:\n
"يقدم المكتب الدائم للكتل النيابية الدعم اللازم لتمكينها من القيام بمهامها على أن يراعى في ذلك الإمكانات المتاحة".\n\n

<b>مهام وصلاحيات رئيس المجلس:</b>\n
\t\t    1- تمثيل المجلس والتكلم باسمه وطبقاً لإرادته.\n
\t\t    2- مراعاة تطبيق أحكام الدستور والنظام الداخلي في مداولات المجلس وقراراته.\n
\t\t    3- وضع جدول أعمال كل جلسة من جلسات المجلس.\n
\t\t    4- رئاسة الجلسات، وإعلان افتتاحها وانتهائها وضبطها وإدارة النقاش فيها وتحديد موضوع البحث وإعطاء الإذن بالكلام.\n
\t\t    5- إعلان قرارات المجلس ومتابعة تنفيذها.\n
\t\t    6- اتخاذ الإجراءات اللازمة لحفظ كرامة المجلس وكرامة اعضائه.\n
\t\t    7- رئاسة الجهاز الإداري للمجلس.\n\n

<b>مهام النائب الأول</b>\n
يتولى النائب الأول صلاحيات رئيس المجلس واختصاصاته في حال غيابه أو تعذر قيامه بمهامه أو اشتراكه في مناقشات المجلس أو عـند بحث الأسئلة والاستجوابات والاقتراحات التي يقدمها الرئيس باعتباره نائباً في المجلس.\n\n

<b>مهام النائب الثاني</b>\n
يتولى النائب الثاني صلاحيات رئيس المجلس واختصاصاته في حال غياب الرئيس ونائبه الأول أو تعذر قيامهما بمهامهما أو اشتراكهما في مناقشات المجلس أو بحث الأسئلة والاستجوابات والاقتراحات التي يقدمانها باعتبارهما نائبين في المجلس.\n\n

<b>مهام المساعدان</b>\n
يتولى المساعدان بإشراف الرئيس المهام التالية:-\n
\t\t    1- متابعة تحضير محاضر الجلسات وخلاصاتها.\n
\t\t    2- تحرير محاضر الجلسات السرية وخلاصاتها وتوقيعها.\n
\t\t    3- رصد نتائج الاقتراع في المجلس. \n
\t\t    4- قيد أسماء طالبي الكلام بحسب ترتيب طلباتهم. \n
\t\t    5- الإشراف على الأمور المتعلقة بحفظ النظام أثناء الجلسات.\n
\t\t    6- القيام بما يطلبه منهما الرئيس تنفيذاً لاختصاصاته.\n\n

<b>آلية انتخاب المكتب الدائم</b>\n
كما هو منصوص عليه في النظام الداخلي لمجلس النواب:\n
المادة 13\n
\t\t    أ- يختار رئيس الجلسة لجنة من ثلاثة نواب ويسمي رئيسها للإشراف على عملية الاقتراع ويحق لمندوبي المرشحين مراقبة عملية الاقتراع والفرز.\n
\t\t    ب- يطلب رئيس الجلسة من كل مرشح للرئاسة أن يعلن ذلك، ثم يعلن بدء عملية الاقتراع.\n
\t\t    ج- يدعو رئيس الجلسة النواب الحاضرين واحداً فواحداً، وتعطي لجنة الإشراف كلا منهم ورقة اقتراع واحدة.\n
\t\t    د- يؤشر النائب على اسم المرشح الذي يريد انتخابه رئيساً على ورقة الاقتراع المعدة وفق إحكام هذا النظام، في المعزل الخاص، ويضع الورقة بذاته في الصندوق الخاص وعلى مرأى من الحضور.\n\n

المادة 14\n
\t\t    أ- يعتبر فائزاً بمنصب الرئيس من حصل على الأكثرية المطلقة للحاضرين إذا كان المترشحون للموقع أكثر من اثنين، أما إذا كان المرشحان اثنين فقط فيعتبر فائزاً من يحصل على الأكثرية النسبية وإذا تساوت الأصوات تجرى القرعة بينهما.\n
\t\t    ب- إذا لم يحصل أي مرشح على تلك الأكثرية، يعاد الانتخاب بين المرشحين اللذين حصلا على أعلى الأصوات، ويعتبر فائزاً من يحصل على الأكثرية النسبية، وإذا تساويا في الأصوات تجرى القرعة بينهما.\n\n

المادة 15\n
يعلن رئيس الجلسة نتيجة الانتخاب ويدعو الرئيس المنتخـب إلى تولي كرسي الرئاسة.\n\n

<b>أحكام متعلقة بآلية انتخاب النائبين الاول والثاني والمساعدان:</b>\n
المادة 16\n
\t\t    أ-يجري انتخاب النائبين الأول والثاني واحداً فواحداً بالطريقة التي جرى فيها انتخاب الرئيس وفقاً لأحكام المادة (14) من هذا النظام.\n
\t\t    ب- ينتخب المساعدان بقائمة واحدة ويعلن فوز اللذين حصلا على الأكثرية النسبية بينهم.\n
\t\t    ج- عند تساوي الأصوات بين مرشحين او اكثر لنفس المنصب تجري القرعة بينهما.\n\n

المادة 36\n
أ- تجري جميع عمليات الانتخاب في المجلس بالاقتراع السري، على أوراق نموذجية تعدها الأمانة العامة للمجلس تحتوي على أسماء المترشحين وتحمل خاتم المجلس وتواقيع أعضاء اللجنة المشرفة على الانتخاب.\n
ب- يجري الانتخاب بالتأشير على اسم أو أسماء المرشحين على ورقة الاقتراع المعدة لهذه الغاية.\n\n

المادة 37\n
لا تدخل في حساب الأكثرية في أي عملية انتخاب الأوراق البيضاء أو الملغاة.\n\n

المادة 38\n
أ- تعتبر ملغاة كل ورقة اقتراع: -\n
\t\t    1- غير مختومة بخاتم المجلس وغير موقعة من أعضاء اللجنة المشرفة.\n
\t\t    2- إذا اشتملت ورقة الاقتراع على إشارات أكثر من المطلوب انتخابهم.\n
\t\t    3- إذا احتوت علامات تعريف أو تمييز للناخب من أي نوع كانت.\n
\t\t    4- إذا تضمنت أسماء أو إشارات أو ألقاباً أو غيرها غير اسم المرشح كما هو وارد في ورقة الاقتراع المعدة وفق أحكام هذا النظام.\n\n

ب- إذا احتوت ورقة الاقتراع الخاصة بلجان المجلس على إشارات تفوق عدد المطلوب انتخابهم يتم شطب الأسماء الزائدة عن العدد المخصص لتلك اللجنة.\n\n

المادة 39\n
تتلف اللجنة المشرفة على الانتخاب أوراق الاقتراع مباشرة بعد نهاية الجلسة التي تم فيها الانتخاب.</string>
    <string name="executive_office_title">المكتب التنفيذي</string>
    <string name="andre_hawari_title">النائب اندريه حواري</string>
    <string name="khaleel_atieh_title">النائب خليل عطية</string>
    <string name="abdulrahman_owaisha_title">النائب عبدالرحمن العوايشة</string>
    <string name="mohamed_baraisa_title">النائب محمد راشد البرايسة</string>
    <string name="mosa_hantash_title">النائب موسى علي محمد هنطش</string>
    <string name="abdullah_akayla_title">النائب عبدالله علي عودة العكايلة</string>
    <string name="yahya_saud_title">النائب يحيى محمد محمود السعود</string>
    <string name="mosa_wahesh_title">النائب موسى علي محمد الوحش</string>
    <string name="omar_karakeash_title">النائب عمر صبحي شحادة قراقيش</string>
    <string name="aziz_obeidi_title">النائب عزيز محمد علي سلمان العبيدي</string>
    <string name="abdul_mehsiri_title">النائب عبد علي محمد عليان المحسيري</string>
    <string name="qais_ziadin_title">النائب قيس خليل يعقوب زيادين</string>
    <string name="khaled_awad_title">النائب خالد رمضان محمد عواد</string>
    <string name="saleh_armouti_title">النائب صالح عبدالكريم شحادة العرموطي</string>
    <string name="mansour_sjaja_title">النائب منصور سيف الدين مراد سجاجه</string>
    <string name="khamis_atieh_title">النائب خميس حسين خليل عطية</string>
    <string name="wrok_committee_title">لجنة العمل</string>
    <string name="finance_committee_title">اللجنة المالية</string>
    <string name="economy_committee_title">لجنة الاقتصاد والاستثمار</string>
    <string name="foreign_committee_title">لجنة الشؤون الخارجية</string>
</resources>